--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,10 @@
 __pycache__/
 local_settings.py
 db.sqlite3
-media
+/media
+venv
+/static
+
 
 # If your build process includes running collectstatic, then you probably don't need or want to include staticfiles/
 # in your Git repository. Update and uncomment the following line accordingly.
@@ -130,4 +133,3 @@ dmypy.json
 
 # End of https://www.gitignore.io/api/django
 
-venv
